[gd_scene load_steps=3 format=3 uid="uid://umq75yaf6wwy"]

[ext_resource type="Script" path="res://core/menu/types/spinbox/BetterSpinbox.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0, 0.364706)
border_color = Color(0.635294, 0.635294, 0.635294, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.0784314)

[node name="BetterSpinbox" type="PanelContainer"]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("1")
script = ExtResource("1")
step = 200.0

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "0.0"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="text_submitted" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
